# citrine

./: Cargo.toml  README.md  expand.rs
examples/: main.rs
src/: class.rs  lib.rs  page.rs  section.rs  solver.rs  solver_old.rs  track.rs  ui.rs
src/systems/: changed.rs  children.rs  mod.rs  position.rs
