[package]
name = "citrine"
version = "0.1.0"
authors = ["Aceeri <conmcclusk@gmail.com>"]
description = "Amethysts soon-to-be UI toolkit"
license = "MIT OR Apache-2.0"

[dependencies]
specs = { git = "https://github.com/slide-rs/specs", commit = "151047aa120f002fc33b0f7cee86bc6a1db88506" } 
hibitset = "0.3.0"
